# minicollection

./: .gitignore  Cargo.toml  README.md
assets/backgrounds/: day-backgrounds.ron  day-beach-sky.ron  night-backgrounds.ron  night-beach-sky.ron  sunset-backgrounds.ron  sunset-beach-sky.ron
assets/prefab/: player_animation.ron
assets/stages/: .TX Tileset Ground.ron  TX Tileset Ground.ron
assets/texture/: Characters.ron  HeavyBandit.ron  exclamationmark.ron  loading.ron
assets/ui/: loading.ron  pause.ron  score.ron  title.ron  win.ron
config/: bindings.ron  display.ron
src/: bundle.rs  components.rs  lib.rs  main.rs  states.rs  systems.rs
src/components/: backgrounds.rs  exclamationmark.rs  player.rs  stages.rs
src/states/: loading.rs  nowloading.rs  pause.rs  ping.rs  title.rs  win.rs
src/systems/: backgrounds.rs  button_control.rs  chara_animation.rs  exclamationmark.rs  gravity_collision.rs  player.rs  stages.rs
