[package]
name = "minicollection"
version = "0.1.0"
authors = []
edition = "2018"
build = "build.rs"

[dependencies]
amethyst = "0.15.0"
rand = "0.7.3"
rand_distr = "0.2.2"
ron = "0.6.0"
num = "0.3.0"
serde = "1.0.114"

[features]
default = ["vulkan", "sdl_controller", "animation"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
sdl_controller = ["amethyst/sdl_controller"]
animation = ["amethyst/animation"]